--- a/YumList/Base.lproj/Main.storyboard
+++ b/YumList/Base.lproj/Main.storyboard
@@ -57,6 +57,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <connections>
+                            <outlet property="dataSource" destination="8rJ-Kc-sve" id="TWc-vL-REq"/>
+                            <outlet property="delegate" destination="8rJ-Kc-sve" id="p5D-vg-ztx"/>
+                        </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="Xzx-yv-ZGW"/>
                 </viewController>
